All Update code push
All Update code push

--- a/SocialRecoveryDAO/Frontend/public/manifest.json
+++ b/SocialRecoveryDAO/Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SocialRecovery DAO",
-  "name": "SocialRecovery DAO powered by Blockchain",
+  "short_name": "Digital-Will",
+  "name": "Digital-Will powered by Blockchain",
   "icons": [
     {
       "src": "favicon.ico",
