doc: update README.md

--- a/SocialRecoveryDAO/Contracts/tsconfig.json
+++ b/SocialRecoveryDAO/Contracts/tsconfig.json
@@ -12,5 +12,10 @@
         "hardhat.config.ts",
         "./deploy",
         "./test",
+        "./scripts",
+        "./typechain"
+    ],
+    "files": [
+        "./hardhat.config.ts"
     ]
 }
