--- a/SocialRecoveryDAO/Contracts/tsconfig.json
+++ b/SocialRecoveryDAO/Contracts/tsconfig.json
@@ -8,12 +8,13 @@
         "forceConsistentCasingInFileNames": true,
         "outDir": "dist"
     },
+    "resolveJsonModule": true,
     "include": [
-        "hardhat.config.ts",
-        "./deploy",
-        "./test",
         "./scripts",
-        "./typechain"
+        // "./typechain",
+        // "./deploy",
+        // "./test"
+        "./hardhat.config.ts"
     ],
     "files": [
         "./hardhat.config.ts"
