--- a/SocialRecoveryDAO/Contracts/package.json
+++ b/SocialRecoveryDAO/Contracts/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "ethers": "^5.7.2",
     "hardhat-deploy": "^0.11.20"
   },
@@ -9,7 +10,6 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "@typechain/ethers-v5": "^10.1.1",
     "@typechain/hardhat": "^6.1.4",
-    "@types/chai": "^4.3.4",
     "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.2",
