--- a/SocialRecoveryDAO/Contracts/tsconfig.json
+++ b/SocialRecoveryDAO/Contracts/tsconfig.json
@@ -6,7 +6,10 @@
         "esModuleInterop": true,
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "types": [
+            "node"
+        ]
     },
     "include": [
         "hardhat.config.ts",
